# multirotor_simulator

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Doxyfile  README.md  XConfiguration.md  gpt.txt  package.xml  plot_csv.py
docs/: Actuation.md  CommonConfigurations.md  Dynamics.md  Kinematics.md  README.md  State.md
examples/: CMakeLists.txt  README.md  fly_example.cpp  plot_results.py  simulation_config.yaml
examples/trajectory_fly_example/: CMakeLists.txt  traj_gen_example.cpp
include/quadrotor_model/: dynamics.hpp  flight_controller.hpp  quadrotor.hpp  quadrotor_actuator.hpp  quadrotor_model.hpp  quadrotor_state.hpp
include/quadrotor_model/common/: actuation.hpp  model.hpp  state.hpp  utils.hpp
include/quadrotor_model/dynamics/: dynamics.hpp
include/quadrotor_model/flight_controller/: flight_controller.hpp
include/quadrotor_model/imu/: imu.hpp
multirotor_simulator/: multirotor_simulator.hpp
multirotor_simulator/imu_simulator/: imu.hpp  inertial_odometry.hpp
multirotor_simulator/multirotor_controllers/: multirotor_controllers.hpp
multirotor_simulator/multirotor_controllers/controllers/: acro_controller.hpp  indi_controller.hpp  position_controller.hpp  trajectory_controller.hpp  velocity_controller.hpp
multirotor_simulator/multirotor_dynamic_model/: dynamics.hpp  model.hpp
multirotor_simulator/multirotor_dynamic_model/common/: state.hpp  utils.hpp
pid_controller/: CMakeLists.txt  CPPLINT.cfg  Doxyfile  README.md
pid_controller/include/pid_controller/: pid.hpp  pid_1d.hpp
pid_controller/tests/: CMakeLists.txt
pid_controller/tests/others_test/: performance_filter_benchmark.cpp  test_performance_reset_integral_benchmark.cpp
pid_controller/tests/pid_1d_test/: pid_1d_benchmark.cpp  pid_1d_gtest.cpp
pid_controller/tests/pid_test/: pid_benchmark.cpp  pid_gtest.cpp  saturate_output_gtest.cpp
src/: dynamics.cpp  flight_controller.cpp  quadrotor.cpp  quadrotor_model.cpp
src/common/: actuation.cpp  model.cpp  state.cpp  utils.cpp
src/dynamics/: dynamics.cpp
src/flight_controller/: flight_controller.cpp
src/imu/: imu.cpp
tests/: dynamics_gtest.cpp  flight_controller_gtest.cpp  flight_controller_test.cpp  init_test.cpp  model_gtest.cpp  model_test.cpp  quadrotor_test.cpp  simple_test.cpp  utils_test.cpp
tests/imu_simulator/: imu_gtest.cpp  inertial_odometry_gtest.cpp
tests/multirotor_controllers/: multirotor_controllers_benchmark.cpp  multirotor_controllers_gtest.cpp
tests/multirotor_controllers/controllers/: acro_controller_benchmark.cpp  acro_controller_gtest.cpp  indi_controller_benchmark.cpp  indi_controller_gtest.cpp  position_controller_benchmark.cpp  position_controller_gtest.cpp  trajectory_controller_benchmark.cpp  trajectory_controller_gtest.cpp  velocity_controller_benchmark.cpp  velocity_controller_gtest.cpp
tests/multirotor_dynamic_model/common/: state_gtest.cpp  utils_benchmark.cpp  utils_gtest.cpp  utils_test.cpp
tests/multirotor_dynamic_model/multirotor_dynamic_model/: dynamics_benchmark.cpp  dynamics_gtest.cpp  model_benchmark.cpp  model_gtest.cpp
tests/multirotor_simulator/: multirotor_simulator_benchmark.cpp  multirotor_simulator_fly_gtest.cpp  multirotor_simulator_gtest.cpp
